added color to table

--- a/Introduccion html css/pokeworld.html
+++ b/Introduccion html css/pokeworld.html
@@ -14,22 +14,22 @@
     <header>
         <h1> Hello PokeWorld! </h1>
         <menu>
-            <span class="menu-item">
+            <div class="menu-item">
                 <a href="https://www.google.com/search?q=pokemon">
                     <button> Google </button>
                 </a>
-            </span>
-            <span class="menu-item">
+            </div>
+            <div class="menu-item">
                 <a href="https://twitter.com/Pokemon">
                     <button> Twitter </button>
                 </a>
-            </span>
-            <span class="menu-item">
+            </div>
+            <div class="menu-item">
                 <a href="https://www.pokemon.com/us">
                     <button> Pokemon <img id="poke-icon" src="assets/images/pokeball_white.png" alt="Pokeball image">
                     </button>
                 </a>
-            </span>
+            </div>
 
         </menu>
     </header>
